--- a/app/assets/stylesheets/_cover.scss
+++ b/app/assets/stylesheets/_cover.scss
@@ -4,15 +4,11 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .hero-cover {
-  width:100%;
-  height: 60vh;                // Need to decide on using vh/vw ?????
-  margin:0;
-  float:left;
-  position:relative;
   overflow:hidden;
+  height:60vh;
 
   @include breakpoint(medium) {
-    height: 100vh;
+    height: 100%;
   }
 }
 
@@ -70,34 +66,26 @@
 
 }
 
+
+
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// ------------------------------------------------- Copied CSS for cover ---------------------------------------------------------- //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
 .homepage-hero-module {
     border-right: none;
     border-left: none;
     position: relative;
-    height: 100%;
-    z-index:-1;
-
+    
 }
-.homepage-hero-module {
-    border-right: none;
-    border-left: none;
-    position: relative;
-}
-
 .no-video .video-container video,
 .touch .video-container video {
     display: none;
 }
-
 .no-video .video-container .poster,
 .touch .video-container .poster {
     display: block !important;
 }
-
-video::-webkit-media-controls {
-    display:none !important;
-}
-
 .video-container {
     position: relative;
     bottom: 0%;
@@ -109,11 +97,10 @@ video::-webkit-media-controls {
 }
 .video-container .poster img {
     width: 100%;
-    bottom: 0;
+    top: 0;
     position: absolute;
 }
 .video-container .filter {
-    z-index: 100;
     position: absolute;
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
@@ -126,4 +113,3 @@ video::-webkit-media-controls {
 .video-container video.fillWidth {
     width: 100%;
 }
-
