updating cover photo stuff again!

--- a/app/views/application/_other_cover.html.erb
+++ b/app/views/application/_other_cover.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-cover-other">
-	<% if current_page?('/profile') || current_page?('/shuffle') %>
+	  <% if current_page?('/shuffle') %>
 	    <div class="blue-img-cover"></div>
 	    <%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
 	<% else %>
