--- a/app/assets/stylesheets/shared/_flash_messages.scss
+++ b/app/assets/stylesheets/shared/_flash_messages.scss
@@ -13,7 +13,7 @@
 }
 
 .flash-cont {
-    background-color: rgba(126,111,178, 0.9);
+    background-color:rgba(0,0,0,0.8);
     position: absolute;
     top: 65px;
     width: 50%;
