error on short cover page

--- a/app/views/posts/_short_cover.html.erb
+++ b/app/views/posts/_short_cover.html.erb
@@ -11,7 +11,7 @@
 	 <% else %>
            	<%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
 	           <div class="hero-phrase">
-	           	<h1><%= "@title "%> </h1>
+	           	<h1><%= @title %> </h1>
 	          	</div>
             <% end %>
 </div>
