--- a/app/assets/javascripts/nav_bar.js.erb
+++ b/app/assets/javascripts/nav_bar.js.erb
@@ -3,6 +3,7 @@ var didScroll;
 var lastScrollTop = 600;
 var delta = 5;
 var navbarHeight = $('.header').outerHeight();
+var sidebarHeight = $('.sidebar').outerHeight();
 
 $(window).scroll(function(event){
     didScroll = true;
@@ -33,6 +34,21 @@ function hasScrolled() {
             $('.header').removeClass('nav-up').addClass('nav-down');
         }
     }
+
+
+
+    // -------------------------------------------------------------------------------------------------------------------------------------------- //
+    // ----------------------------------------------------------- SideBar movement ------------------------------------------------------------------ //
+    // -------------------------------------------------------------------------------------------------------------------------------------------- //
     
+    if (st > lastScrollTop && st > navbarHeight){
+        // Scroll Down
+        $('.sidebar').removeClass('side-down').addClass('side-up');
+    } else {
+        // Scroll Up
+        if(st + $(window).height() < $(document).height()) {
+            $('.sidebar').removeClass('side-up').addClass('side-down');
+        }
+    }
     lastScrollTop = st;
 }
