--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
- <div class="sidebar area" data-sidebar >  
+ <div class="sidebar area side-down" data-sidebar >  
             <ul>
                   <!-- Login Section -->
               <div class="login-section-sidebar group"> 
