--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -30,6 +30,16 @@
           float:left;
           margin:0;
           padding:0;
+          
+              a {
+                  text-decoration: none;
+                h2 {
+                  color:$white;
+                  height: 25px;
+                  margin: 0;
+                  padding: 20px;
+                }
+              }
 
             img {
               height: 30px;
