--- a/app/views/application/_logo.html.erb
+++ b/app/views/application/_logo.html.erb
@@ -1,5 +1,5 @@
 <div class="logo">
 	<%= link_to root_path do %>
-		<%= image_tag("tea-logo.png") %>
+	<h2 class="logo-title">TEA</h2>
 	<% end %>
 </div>
