updates to about page

--- a/app/assets/stylesheets/_static_pages.scss
+++ b/app/assets/stylesheets/_static_pages.scss
@@ -38,6 +38,10 @@
 }
 
 .mail-to-about {
-      color:$purple;
+      color:$teal;
       text-decoration: none;
+      
+      &:hover {
+            text-decoration: underline;
+      }
 }
