bit of change to shuffle link on phones

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -120,6 +120,12 @@
             display:none;
           }
       }
+
+      .shuffle-link {
+        @include breakpoint(small){
+            display:none;
+          }
+      }
       .contribute-link {
           @include breakpoint(medium){
             display:none;
