--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -33,7 +33,7 @@
 
                  <% if params[:p] == "shuffle" %>
                       <%= nav_link_to posts_shuffle_path(p: "shuffle") do %>
-                            <li class="user-links"><p>SHUFFLE AGAIN!</p></li>
+                            <li class="user-links shuffle-link"><p>SHUFFLE AGAIN!</p></li>
                       <% end %>
                  <% else %>
                       <%= nav_link_to posts_shuffle_path(p: "shuffle") do %>
