bit of change to shuffle link on phones, again!!!

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -37,7 +37,7 @@
                       <% end %>
                  <% else %>
                       <%= nav_link_to posts_shuffle_path(p: "shuffle") do %>
-                            <li class="user-links"><p>SHUFFLE!</p></li>
+                            <li class="user-links shuffle-link"><p>SHUFFLE!</p></li>
                       <% end %>
                  <% end %>
 
