--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tag %>
+
   <meta name="description=" content="A library of inspiring, engaging and informative media, bringing together the very best of the freely available sources of education from all corners of the web (Mostly YouTube.)
                         TEA is a nearly endless supply of enlightening content. We believe there is no limit knowledge.">
     
@@ -16,6 +17,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,6 +28,8 @@
   ga('send', 'pageview');
 
 </script>
+
+  <script src="http://api.html5media.info/1.1.5/html5media.min.js"></script>
 
 </head>  
   
