--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -79,11 +79,47 @@
       h1 {
            font-size: 2rem;
            font-weight: 200;
+           margin: 0;
            
            @include breakpoint(small) {
               font-size: 3rem;
             }
   }
+
+  .shuffle-category {
+      cursor:pointer;
+      text-decoration:none;
+      border:2px solid $white;
+      border-radius: 3px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 170px;
+      
+      a{
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+        
+        h2 {
+            color:$white;
+            font-size:1rem;
+            font-weight: 300;
+            margin: 0;
+            padding: 5px;
+            
+            &:hover {
+                background-color: $white;
+                color: $purple;
+            }      
+            
+            @include breakpoint(small) {
+                font-size:1.2rem;
+      }
+        }
+      }
+      
+      
+    }
 }
 
 .hero-buttons {
