making shuffle for categories better

--- a/app/views/application/_home_cover.html.erb
+++ b/app/views/application/_home_cover.html.erb
@@ -19,7 +19,7 @@
                 <%= link_to 'Most Liked' , posts_mostliked_path , class: 'mostliked-button shifty' %>
                 <%= image_tag("bulb-icon-1005064002-yellow.png", class: 'home-light-img')%>
             </div>
-            <%= link_to 'Shuffle' , posts_shuffle_path(p: "shuffle") , class: 'shuffle-button wiggle' %>
+            <%= link_to 'Shuffle' , posts_shuffle_path(p: "All") , class: 'shuffle-button wiggle' %>
       </div>
 
       <div class="start-watching center">Start watching now</div>
