--- a/app/views/application/_shuffle.html.erb
+++ b/app/views/application/_shuffle.html.erb
@@ -1,11 +1,11 @@
 <div class="shuffle-section-header">
       	<%  if params[:p].present? %>
-	        <% if params[:p] == "shuffle" %>
-	              <%= nav_link_to 'SHUFFLE AGAIN!' , posts_shuffle_path(p: "shuffle")%>
+	        <% if params[:p] == "shuffle" || params[:p] == "All" %>
+	              <%= nav_link_to 'SHUFFLE AGAIN!' , posts_shuffle_path(p: "All")%>
 	        <% else %>
 	              <%= nav_link_to "SHUFFLE #{params[:p].upcase}!", posts_shuffle_path(p: params[:p])%>
 	        <% end %>
 	<% else %>
-	       <%= nav_link_to 'SHUFFLE!' , posts_shuffle_path(p: "shuffle")%>
+	       <%= nav_link_to 'SHUFFLE!' , posts_shuffle_path(p: "All")%>
        	<% end %>
 </div>
