--- a/app/assets/stylesheets/_contributions.scss
+++ b/app/assets/stylesheets/_contributions.scss
@@ -26,10 +26,18 @@
 		text-align: center;
 		margin: 0;
 		
+		h2 {
+			font-size: 1.2rem;
+			margin: 0;
+			padding: 5px 0;
+			color:$purple;
+			font-weight:300;
+		}
+		
 		a {
 			text-decoration:none;
 			color:$white;
-			font-size: 15px;
+			font-size: 1rem;
 		}
 
 		.table-wrap {
@@ -42,10 +50,6 @@
 			line-height: 30px;
 			float: left;
 			
-			h2 {
-				margin: 0;
-				color:$purple;
-			}
 		}
 
 		.view-header-small {
@@ -54,10 +58,6 @@
 			line-height: 30px;
 			float: left;
 			
-			h2 {
-				margin: 0;
-				color:$purple;
-			}
 		}
 		
 
