--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -30,15 +30,27 @@
                  <%= nav_link_to posts_mostliked_path do %>
                       <li class="user-links"><p>MOST LIKED</p></li>
                  <% end %>
-
-                 <% if params[:p] == "All" %>
-                      <%= nav_link_to posts_shuffle_path(p: "All") do %>
-                            <li class="user-links shuffle-link"><p>SHUFFLE AGAIN!</p></li>
-                      <% end %>
+                  
+                 <%  if params[:p].present? %>
+                       <% if params[:p] == "All" %>
+                            <%= nav_link_to posts_shuffle_path(p: "All") do %>
+                                  <li class="user-links shuffle-link"><p>SHUFFLE AGAIN!</p></li>
+                            <% end %>
+                        <% else %>
+                            <%= nav_link_to posts_shuffle_path(p: params[:p]) do %>
+                                  <li class="user-links shuffle-link"><p>SHUFFLE <%= params[:p].upcase %>!</p></li>
+                            <% end %>
+                        <% end %>
                  <% else %>
-                      <%= nav_link_to posts_shuffle_path(p: "All") do %>
-                            <li class="user-links shuffle-link"><p>SHUFFLE!</p></li>
-                      <% end %>
+                        <% if params[:name].present?  %>
+                            <%= nav_link_to posts_shuffle_path(p: "All") do %>
+                                  <li class="user-links shuffle-link"><p>SHUFFLE ALL!</p></li>
+                            <% end %>
+                        <% else %>
+                            <%= nav_link_to posts_shuffle_path(p: "All") do %>
+                                  <li class="user-links shuffle-link"><p>SHUFFLE!</p></li>
+                            <% end %>
+                        <% end %>
                  <% end %>
 
                   <!-- Contribute Section -->
