fixing container rounding issue

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -159,7 +159,7 @@
     }
   }
   @include breakpoint(large) {
-    width: 33.3333333333333%;
+    width: 33.3334%;
 
     .post-description {
      font-size: 0.87rem;
@@ -213,7 +213,7 @@
     }
   }
   @include breakpoint(large) {
-    width: 33.3333333333333%;
+    width: 33.3334%;
 
     .post-description {
      font-size: 0.87rem;
@@ -323,7 +323,7 @@
     }
   }
   @include breakpoint(large) {
-    width: 33.3333333333333%;
+    width: 33.3334%;
 
     .post-description {
       font-size: 0.87rem;
@@ -376,7 +376,7 @@
     }
   }
   @include breakpoint(large) {
-    width: 33.3333333333333%;
+    width: 33.3334%;
 
     .post-description {
       font-size: 0.87rem;
