--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,4 +1,4 @@
 <div class="search-button">
     <i class="fa fa-search search-icon"></i>
-    <input type="text" class="search-input" name="search" placeholder="Search"></input>
+    <input type="text" style="text-transform: uppercase" class="search-input" name="search" placeholder="SEARCH TEA"></input>
 </div> 
