--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,5 +1,13 @@
  <div class="sidebar area side-down" data-sidebar >  
             <ul>
+                  
+                <!-- Search Section  -->
+            
+                    <form action="<%= search_path %>" method="get" class="search-input-sidebar" >
+                      <%= text_field_tag :q, params[:s], placeholder: "SEARCH TEA ...", class: "search-input-sidebar-field"%>
+                      <%= submit_tag "Search", :style => "display: none;", :name  => nil %>
+                    </form>
+
                   <!-- Login Section -->
               <div class="login-section-sidebar group"> 
                  <% if user_signed_in? %>
@@ -20,6 +28,7 @@
                       <% end %>
                   <% end %>
                 </div>
+
                 
                   <!-- Nav Button Section -->
 
