--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -132,9 +132,6 @@
           }
       }
 
-      .login-section-sidebar {
-          border-top: 1px solid $lightteal;
-      }
       .static-section {
           position: absolute;
           width: 100%;
@@ -146,4 +143,50 @@
     .login-section-sidebar {
       height: 28.5714%
     }
+
+
+    /////////// SEARCH SECTION //////////
+
+    .search-input-sidebar {
+        margin: 0;
+        color:$white;
+        padding:4% 0;
+        text-transform: uppercase;
+        background-color: rgba(0,0,0,0);
+        border-bottom: 1px solid $lightteal;
+        font-family:'Roboto',sans-serif;
+        font-size: 0.8rem;
+        
+        @include breakpoint(small){
+            margin: 0;
+            padding: 8% 0;
+        }
+
+        @include breakpoint(small-medium){
+            display: none;
+        }
+      }
+
+      .search-input-sidebar-field {
+        margin: 0;
+        color:$white;
+        padding:0 30px;
+        text-transform: uppercase;
+        background-color: rgba(0,0,0,0);
+        border:none;
+        font-family:'Roboto',sans-serif;
+        font-size: 0.8rem;
+
+      }
+
+      ::-webkit-input-placeholder {
+         font-family:'Roboto',sans-serif;
+         color: $white;
+         font-weight:300;
+         padding: 0;
+      }
+
+      .search-input-sidebar-field:focus {
+        outline:none;
+      }
  } 
