--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -13,7 +13,7 @@
         
           <%= render 'submit' %>
 
-          <%#= render 'search' %> 
+          <%= render 'search' %> 
 
       <!--  Left -->
 
@@ -23,7 +23,7 @@
 
           <%= render 'shuffle' %>
 
-          <% if current_page?('/') or current_page?('/posts') or current_page?('/profile') or current_page?('/most_liked') or current_page?('/latest') or current_page?('/shuffle')%>
+          <% if current_page?('/') || current_page?('/posts') || current_page?('/profile') || current_page?('/most_liked') || current_page?('/latest') || current_page?('/shuffle') || current_page?('/search') %>
               <%= render 'tags' %>
           <% end %>
 
