--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,4 +1,7 @@
 <div class="search-button">
-    <i class="fa fa-search search-icon"></i>
-    <input type="text" style="text-transform: uppercase" class="search-input" name="search" placeholder="SEARCH TEA"></input>
+    	<i class="fa fa-search search-icon"></i>
+	<form action="<%= search_path %>" method="get" class="search-input" >
+		<%= text_field_tag :q, params[:s], placeholder: "SEARCH TEA", class: "search-input"%>
+		<%= submit_tag "Search", :style => "display: none;", :name  => nil %>
+	</form>
 </div> 
