--- a/app/views/posts/_short_cover.html.erb
+++ b/app/views/posts/_short_cover.html.erb
@@ -14,7 +14,9 @@
 	          </div>
 	 <% else %>
 	           <div class="hero-phrase">
-	           	<h1><%= @title %> </h1>
+	           	<h3><%= @title %> </h3>
+	           	<h5><%= @posts_size %></h5>
+	           	<h5><%= @description %> </h5>
 	          	</div>
             <% end %>
 </div>
