--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -35,7 +35,7 @@
             }
 
             @include breakpoint(medium) {
-              font-size: 3rem;
+              font-size: 2.5rem;
               padding-right: 0;
               padding-left: 0;
               padding-top: 0;
@@ -51,7 +51,7 @@
           display: none;
 
           @include breakpoint(medium) {
-            font-size: 2rem;
+            font-size: 1.5rem;
             padding-right: 0;
             padding-left: 0;
             padding-top: 30px;
@@ -69,7 +69,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  top:45%;
+  top:48%;
   color:$white;
   
   
@@ -79,9 +79,29 @@
            margin: 0;
            
            @include breakpoint(small) {
-              font-size: 3rem;
+              font-size: 2.5rem;
             }
-  }
+         }
+
+         h3 {
+           font-size: 1rem;
+           font-weight: 200;
+           margin: 0;
+           
+           @include breakpoint(small) {
+              font-size: 1.8rem;
+            }
+         }
+
+         h5 {
+           font-size: 0.8rem;
+           font-weight: 200;
+           margin: 10px;
+           
+           @include breakpoint(small) {
+              font-size: 1.5rem;
+            }
+         }
 
   .shuffle-category {
       cursor:pointer;
