--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -159,7 +159,7 @@
 	border-radius:3px;
 	line-height: 20px;
 	padding: 5px 10px;
-	margin: 5px;
+	margin: 3px 1px;
 	border-style: none;
 	color:$white;
 	font-size: 0.8rem;
